Isoquery trunk
==============

* Add #include statements required by GCC 4.3. Thanks to
  Martin Michlmayr for the bug report and patch. Closes: #462206


Isoquery 0.11
=============
9 January 2008

* Require po4a in configure script for manpage translations
* Require pkg-config and libxml++ (>2.6.0) in configure script
* Add support for ISO 15924
* Update tests to pass with iso-codes 1.8
* Update French translation, thanks to Christian Perrier


Isoquery 0.10
=============
2 January 2008

* Bug fix:
  The codes in ISO 639 were shown twice if 2B and 2T code are
  identical. Examples are vie, swa.
* Setup testing framework to catch regression bugs
* Remove call to bindtextdomain(), enabling translations of the
  program output itself


Isoquery 0.9
============
13 November 2007

* Add man page
* Use po4a to translate man page into German


Isoquery 0.8
============
UNRELEASED

* Initial setup, using basic classes and C++ code
* Perform gettextize on source code